--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ target/classes/properties/application.properties
 .settings/.jsdtscope
 .settings/org.eclipse.m2e.core.prefs
 .settings/org.eclipse.wst.common.component
+/target/
