added classpath in ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 target/classes/properties/application.properties
 .project
+.classpath
 .settings/.jsdtscope
 .settings/org.eclipse.m2e.core.prefs
 .settings/org.eclipse.wst.common.component
