--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 target/classes/properties/application.properties
 .project
 .classpath
-.settings/.jsdtscope
-.settings/org.eclipse.m2e.core.prefs
-.settings/org.eclipse.wst.common.component
+.settings/
 /target/
